some quick fix fixes to resolve some of the yellow issues